syntax = "proto3";
package oprc;

message ObjectInvocationRequest{
    int32 partition_id = 1;
    optional uint64 object_id = 2;
    string cls_id = 3;
    string fn_id = 4;
    map<string, string> options = 5;
    bytes payload = 6;
}

message InvocationRequest{
    optional int32 partition_id = 1;
    string cls_id = 3;
    string fn_id = 4;
    map<string, string> options = 5;
    bytes payload = 6;
}


message InvocationResponse{
    optional bytes payload = 1;
    ResponseStatus status = 2;
}

enum ResponseStatus{
    OKAY=0;
    ERROR=1;
}

service OprcFunction {
    rpc invoke_fn(InvocationRequest) returns (InvocationResponse);
    rpc invoke_obj(ObjectInvocationRequest) returns (InvocationResponse);
}